RESOLVED FIXED214172
[LFC][MarginCollapsing] Margins do not collapse through when the box has clearance.
https://bugs.webkit.org/show_bug.cgi?id=214172
Summary [LFC][MarginCollapsing] Margins do not collapse through when the box has clea...
Attachments
Patch (4.39 KB, patch)
2020-07-09 21:47 PDT, alan
no flags
alan
Comment 1 2020-07-09 21:47:18 PDT
EWS
Comment 2 2020-07-10 03:48:38 PDT
Committed r264214: <https://trac.webkit.org/changeset/264214> All reviewed patches have been landed. Closing bug and clearing flags on attachment 403944 [details].
Radar WebKit Bug Importer
Comment 3 2020-07-10 03:49:17 PDT
Note You need to log in before you can comment on or make changes to this bug.