[LFC][MarginCollapsing] Margins do not collapse through when the box has clearance. https://bugs.webkit.org/show_bug.cgi?id=214172

Reviewed by Antti Koivisto.

Source/WebCore:

https://www.w3.org/TR/CSS22/box.html#collapsing-margins
"Two margins are adjoining if and only if: no line boxes, no clearance, no padding and no border separate them"

Only adjoining margins can collapse through.

Test: fast/layoutformattingcontext/empty-block-level-box-with-clearance.html

* layout/blockformatting/BlockMarginCollapse.cpp:
(WebCore::Layout::BlockFormattingContext::MarginCollapse::marginsCollapseThrough const):

LayoutTests:

* fast/layoutformattingcontext/empty-block-level-box-with-clearance-expected.html: Added.
* fast/layoutformattingcontext/empty-block-level-box-with-clearance.html: Added.


Canonical link: https://commits.webkit.org/226982@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264214 268f45cc-cd09-0410-ab3c-d52691b4dbfc